# dj-spike

./: .gitignore  AGENTS.md  CHANGELOG.md  manage.py  pyproject.toml
.agents/commands/: f8-close.md  f8-new.md  f8-refine.md
dj_advertisers/: admin.py  apps.py  fields.py  filters.py  mcp.py  models.py  serializers.py  urls.py  views.py
dj_advertisers/fixtures/: README.md  advertiser.yaml
dj_advertisers/migrations/: 0001_initial.py
dj_advertisers/tests/: test_filters.py  test_mcp.py  test_models.py  test_serializers.py  test_views.py
dj_mcp_fix/: __init__.py  apps.py
dj_spike/: asgi.py  settings.py  urls.py  wsgi.py
docs/features/: F-001_ADVERTISER_API.md  F-002_ADVERTISER_PERFORMANCE_REPORT.md  F-003_ADVERTISER_FILTERS.md  F-004_ADVERTISER_MCP_SERVER.md  FEATURE_INDEX.md  FEATURE_TEMPLATE.md
docs/features/archive/: F-001_ADVERTISER_API.md  F-003_ADVERTISER_FILTERS.md  F-004_ADVERTISER_MCP_SERVER.md
